[gd_scene load_steps=4 format=3 uid="uid://dcrk6phe4reec"]

[ext_resource type="Texture2D" uid="uid://fk5tkhu74lpd" path="res://backgound_and_tiles/BG1.png" id="1_k2sip"]
[ext_resource type="Script" path="res://login_page.gd" id="1_n5js8"]
[ext_resource type="PackedScene" uid="uid://b6y0f1si6ab4p" path="res://status_panel.tscn" id="3_bwqoy"]

[node name="LoginPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n5js8")

[node name="LoginBackground" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -32.0
offset_top = -48.0
offset_right = 672.0
offset_bottom = 400.0
texture = ExtResource("1_k2sip")
expand_mode = 1

[node name="LoginPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 48.0
offset_right = 576.0
offset_bottom = 298.0

[node name="UsernameContainer" type="HBoxContainer" parent="LoginPanel"]
layout_mode = 2
offset_left = 104.0
offset_top = 50.0
offset_right = 408.0
offset_bottom = 81.0
theme_override_constants/separation = 15

[node name="UsernameLabel" type="Label" parent="LoginPanel/UsernameContainer"]
layout_mode = 2
text = "Email:     "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Username" type="LineEdit" parent="LoginPanel/UsernameContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "请输入正确的邮箱地址"

[node name="PasswordContainer" type="HBoxContainer" parent="LoginPanel"]
layout_mode = 2
offset_left = 104.0
offset_top = 100.0
offset_right = 408.0
offset_bottom = 131.0

[node name="PasswordLabel" type="Label" parent="LoginPanel/PasswordContainer"]
layout_mode = 2
text = "Password:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Password" type="LineEdit" parent="LoginPanel/PasswordContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入至少8位数密码"

[node name="JoinIdle" type="Button" parent="LoginPanel"]
layout_mode = 2
offset_left = 176.0
offset_top = 192.0
offset_right = 336.0
offset_bottom = 227.0
text = "成为闲鱼"

[node name="StatusPanel" parent="LoginPanel" instance=ExtResource("3_bwqoy")]
layout_mode = 1
offset_left = 128.0
offset_top = 144.0
offset_right = -128.0
offset_bottom = -83.0

[node name="FishCreatePanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 48.0
offset_right = 576.0
offset_bottom = 298.0

[node name="FishContainer" type="HBoxContainer" parent="FishCreatePanel"]
layout_mode = 0
offset_left = 120.0
offset_top = 96.0
offset_right = 392.0
offset_bottom = 136.0

[node name="FishName" type="LineEdit" parent="FishCreatePanel/FishContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "给鱼起个名字"
alignment = 1

[node name="JoinTank" type="Button" parent="FishCreatePanel"]
layout_mode = 0
offset_left = 192.0
offset_top = 160.0
offset_right = 320.0
offset_bottom = 200.0
text = "跳进鱼缸"

[connection signal="text_submitted" from="LoginPanel/PasswordContainer/Password" to="." method="_on_password_text_submitted"]
[connection signal="button_down" from="LoginPanel/JoinIdle" to="." method="_on_join_idle_button_down"]
[connection signal="button_down" from="FishCreatePanel/JoinTank" to="." method="_on_join_tank_button_down"]
